--- a/Laserschnitt-Vorlagen/Spalt-Werkzeug/puzzle.css
+++ b/Laserschnitt-Vorlagen/Spalt-Werkzeug/puzzle.css
@@ -1,7 +1,5 @@
-iframe {
-    width: 90%;
-    height: 90%;
-    overflow: scroll;
+body {
+    margin: 20px;
     }
 .pathPoint {
     stroke: gray;
